--- a/project.config.json
+++ b/project.config.json
@@ -12,9 +12,9 @@
 		"autoAudits": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.4.4",
+	"libVersion": "2.5.0",
 	"appid": "wx285b3c2c024e5b12",
-	"projectname": "demo",
+	"projectname": "miniProgramDemo",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
