增加资料页
资料页支持转发, 从转发页进入也能正常显示

--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/logs/logs",
     "pages/myApps/myApps",
-    "pages/appCenter/appCenter"
+    "pages/appCenter/appCenter",
+    "pages/profile/profile"
   ],
   "window":{
     "backgroundTextStyle":"light",
