--- a/app.json
+++ b/app.json
@@ -10,6 +10,8 @@
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "小程序demo",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black",
+    
+    "enablePullDownRefresh": true
   }
 }
